--- a/index.html
+++ b/index.html
@@ -65,7 +65,9 @@
             accusamus sint neque at odio esse eos expedita 
             accusantium beatae officia, deleniti sunt, commodi 
             aut odit.</p>
+            <img class="linha" src="imagens/Linha.png" alt="Imagem de uma linha rabiscada">
         </div>
+        <img class="fundo" src="imagens/Borrao.png" alt="Imagem de respingo de tinta">
         <div class="icones">
             <button class="financeiro">
                 <img class="moedas" src="icones/iconmonstr-coin-10.svg" alt="icone de moedas">financeiro
@@ -75,7 +77,7 @@
                 <img class="casa" src="icones/iconmonstr-home-10.svg" alt="Icone de uma casa">história
             </button>
 
-            <button class="local">
+            <button class="localizacao">
                 <img class="ponto" src="icones/location2.svg" alt="Icone ponto de local">local
             </button>
 
@@ -83,8 +85,6 @@
                 <img class="telefone" src="icones/phone.svg" alt="Icone de telefone">contatos
             </button>
         </div>
-        <img class="linha" src="imagens/Linha.png" alt="Imagem de uma linha rabiscada">
-        <img class="fundo" src="imagens/Borrao.png" alt="Imagem de respingo de tinta">
     </section>
     </main>
 
