--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 vero explicabo dignissimos ducimus optio ullam facere 
                 quam? Illum doloremque unde nulla doloribus.
             </p>
-        <button><img class="seta" src="icones/seta.png" alt="Imagem de uma seta apontando para a direita"></button>
+        <button class="botao"><img class="seta" src="icones/seta.png" alt="Imagem de uma seta apontando para a direita"></button>
     </div>
 
     <div class="segundaParte">
@@ -50,39 +50,42 @@
             excepturi temporibus harum beatae sequi explicabo corporis 
             inventore iure quia. Veritatis, numquam.</p>
     </div>
-    <img class="fundo" src="imagens/Borrao.png" alt="Imagem de um respingo de tinta">
+    <img class="fundo" src="imagens/tinta.png" alt="Imagem de um respingo de tinta">
     <img class="mulher" src="imagens/Mulher.webp" alt="Imagem de uma mulher">
     </section>
 
     <section class="conteudo-2" id="sobreNos">
         <div class="texto">
             <h1 class="titulo">Sobre nós</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing 
-            elit. Maxime mollitia aut incidunt, obcaecati eaque 
-            dignissimos officia ex voluptatem. Qui delectus ex 
-            velit culpa eius. Facilis dolorem voluptatibus fuga 
-            ex iste necessitatibus est explicabo blanditiis 
-            accusamus sint neque at odio esse eos expedita 
-            accusantium beatae officia, deleniti sunt, commodi 
-            aut odit.</p>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+                Odit incidunt consectetur optio neque quae quisquam nobis 
+                quaerat consequuntur. Adipisci assumenda quibusdam 
+                corporis! Voluptate consectetur, natus alias ut dolor a 
+                amet laboriosam, explicabo facere excepturi quibusdam 
+                nulla sint, voluptatibus nostrum sapiente! Amet perferendis, 
+                atque dicta neque vel modi itaque exercitationem corrupti 
+                accusamus mollitia tenetur ipsam praesentium adipisci perspiciatis 
+                aliquam officia doloribus laborum quaerat blanditiis iusto 
+                dolore animi nam consequuntur pariatur? Pariatur similique 
+                ducimus, ullam autem nobis officiis a ipsam alias laborum.</p>
             <img class="linha" src="imagens/Linha.png" alt="Imagem de uma linha rabiscada">
         </div>
-        <img class="fundo" src="imagens/Borrao.png" alt="Imagem de respingo de tinta">
-        <div class="icones">
-            <button class="financeiro">
-                <img class="moedas" src="icones/iconmonstr-coin-10.svg" alt="icone de moedas">financeiro
+        <img class="fundo" src="imagens/tinta.png" alt="Imagem de respingo de tinta">
+        <div class="container">
+            <button class="botao-2">
+                <img class="item" src="icones/dollar.png" alt="icone de moedas">financeiro
             </button>
 
-            <button class="historia">
-                <img class="casa" src="icones/iconmonstr-home-10.svg" alt="Icone de uma casa">história
+            <button class="botao-2">
+                <img class="item" src="icones/house.png" alt="Icone de uma casa">história
             </button>
 
-            <button class="localizacao">
-                <img class="ponto" src="icones/location2.svg" alt="Icone ponto de local">local
+            <button class="botao-2">
+                <img class="item" src="icones/map.png" alt="Icone ponto de local">local
             </button>
 
-            <button class="contatos">
-                <img class="telefone" src="icones/phone.svg" alt="Icone de telefone">contatos
+            <button class="botao-2">
+                <img class="item" src="icones/telephone.png" alt="Icone de telefone">contatos
             </button>
         </div>
     </section>
