--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </header>
 
     <main>
-        <section class="conteudo-1">
+        <section class="conteudo-1" id="nossaHistoria">
             <div class="primeiraParte">
                 <h1 class="titulo">Nossa história</h1>
             <p>
@@ -36,7 +36,10 @@
                 Eius rem iure, error dicta enim sequi possimus eos 
                 quia natus deserunt cum asperiores quaerat, cupiditate 
                 vero explicabo dignissimos ducimus optio ullam facere 
-                quam? Illum doloremque unde nulla doloribus.
+                quam? Illum doloremque unde nulla doloribus. Lorem ipsum
+                 dolor sit amet consectetur adipisicing elit. 
+                 Reprehenderit, cum obcaecati odit fuga ipsa architecto 
+                 magni exercitationem reiciendis quam consequatur.
             </p>
         <button class="botao"><img class="seta" src="icones/seta.png" alt="Imagem de uma seta apontando para a direita"></button>
     </div>
@@ -51,7 +54,7 @@
             inventore iure quia. Veritatis, numquam.</p>
     </div>
     <img class="fundo" src="imagens/tinta.png" alt="Imagem de um respingo de tinta">
-    <img class="mulher" src="imagens/Mulher.webp" alt="Imagem de uma mulher">
+    <img class="mulher" src="imagens/Mulher.png" alt="Imagem de uma mulher">
     </section>
 
     <section class="conteudo-2" id="sobreNos">
@@ -76,27 +79,30 @@
                 <img class="item" src="icones/dollar.png" alt="icone de moedas">financeiro
             </button>
 
-            <button class="botao-2">
+            <a href="#nossaHistoria" class="botao-2">
                 <img class="item" src="icones/house.png" alt="Icone de uma casa">história
-            </button>
+            </a>
 
             <button class="botao-2">
                 <img class="item" src="icones/map.png" alt="Icone ponto de local">local
             </button>
 
-            <button class="botao-2">
+            <a href="#rodape" class="botao-2">
                 <img class="item" src="icones/telephone.png" alt="Icone de telefone">contatos
-            </button>
+            </a>
         </div>
     </section>
     </main>
 
     <footer class="rodape" id="rodape">
         <img class="flores" src="imagens/flores-rodape.png" alt="Imagem de um galho com flores">
-        <p>Entre em contato:</p>
-        <p><img class="instagram" src="icones/instagram.svg" alt="Icone do instagram">_femme</p>
-        <p><img class="email" src="icones/mail.svg" alt="Icone de envelope">contatofemme@gmail.com</p>
-        <p> <img class="telefone" src="icones/iconmonstr-phone-8.svg" alt="Icone de telefone"> (21) 93345.2653</p>
+        <div class="menuRodape">
+            <p class="contat">Entre em contato:</p>
+            <p class="itemRodape"><img class="instagram" src="icones/instagram.png" alt="Icone do instagram">_femme</p>
+            <p class="itemRodape"><img class="email" src="icones/envelope.png" alt="Icone de envelope">contatofemme@gmail.com</p>
+            <p class="itemRodape"> <img class="telefone" src="icones/telephone-.png" alt="Icone de telefone"> (21) 93345.2653</p>
+        </div>
+        <img class="flores" src="imagens/flores-direita.png" alt="Imagem de um galho com flores">
     </footer>
 </body>
 </html>
