Commit adicionando media query

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <img class="decoracao-cabecalho-2" src="imagens/flores-direita.png" alt="Imagem de um galho com flores">
     </div>
     <div class="cabecalho-menu">
-        <img href="#inicio" class="logo" src="imagens/LogoFemme.png" alt="Logo Femme">
+        <img class="logo" src="imagens/LogoFemme.png" alt="Logo Femme">
             <nav class="menu">
             <a href="#inicio" class="item-1">Home</a>
             <a href="#sobreNos" class="item-2">Sobre nós</a>
