--- a/index.html
+++ b/index.html
@@ -1,97 +1,99 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page Femme</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
+
 <body>
     <header class="cabecalho" id="inicio">
         <div class="decoracao">
-        <img class="decoracao-cabecalho-1" src="imagens/flores-esquerda.png" alt="Imagem de um galho com flores">
-        <img class="decoracao-cabecalho-2" src="imagens/flores-direita.png" alt="Imagem de um galho com flores">
-    </div>
-    <div class="cabecalho-menu">
-        <img class="logo" src="imagens/LogoFemme.png" alt="Logo Femme">
+            <img class="decoracao-cabecalho-1" src="imagens/flores-esquerda.png" alt="Imagem de um galho com flores">
+            <img class="decoracao-cabecalho-2" src="imagens/flores-direita.png" alt="Imagem de um galho com flores">
+        </div>
+        <div class="cabecalho-menu">
+            <img class="logo" src="imagens/LogoFemme.png" alt="Logo Femme">
             <nav class="menu">
-            <a href="#inicio" class="item-1">Home</a>
-            <a href="#sobreNos" class="item-2">Sobre nós</a>
-            <a href="#rodape" class="item-3">Contato</a>
-        </nav>
-        <input class="input-pesquisar" 
-        type="text" placeholder="Pesquisar">
-        </input>
-    </div>
+                <a href="#inicio" class="item-1">Home</a>
+                <a href="#sobreNos" class="item-2">Sobre nós</a>
+                <a href="#rodape" class="item-3">Contato</a>
+            </nav>
+            <input class="input-pesquisar" type="text" placeholder="Pesquisar">
+            </input>
+        </div>
     </header>
 
     <main>
         <section class="conteudo-1" id="nossaHistoria">
             <div class="primeiraParte">
                 <h1 class="titulo">Nossa história</h1>
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing 
-                elit. Dolorum laboriosam, esse, ipsam id sapiente 
-                aliquam eum rem consequuntur delectus sed nesciunt? 
-                Eius rem iure, error dicta enim sequi possimus eos 
-                quia natus deserunt cum asperiores quaerat, cupiditate 
-                vero explicabo dignissimos ducimus optio ullam facere 
-                quam? Illum doloremque unde nulla doloribus. Lorem ipsum
-                 dolor sit amet consectetur adipisicing elit. 
-                 Reprehenderit, cum obcaecati odit fuga ipsa architecto 
-                 magni exercitationem reiciendis quam consequatur.
-            </p>
-        <button class="botao"><img class="seta" src="icones/seta.png" alt="Imagem de uma seta apontando para a direita"></button>
-    </div>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing
+                    elit. Dolorum laboriosam, esse, ipsam id sapiente
+                    aliquam eum rem consequuntur delectus sed nesciunt?
+                    Eius rem iure, error dicta enim sequi possimus eos
+                    quia natus deserunt cum asperiores quaerat, cupiditate
+                    vero explicabo dignissimos ducimus optio ullam facere
+                    quam? Illum doloremque unde nulla doloribus. Lorem ipsum
+                    dolor sit amet consectetur adipisicing elit.
+                    Reprehenderit, cum obcaecati odit fuga ipsa architecto
+                    magni exercitationem reiciendis quam consequatur.
+                </p>
+                <button class="botao"><img class="seta" src="icones/seta.png"
+                        alt="Imagem de uma seta apontando para a direita"></button>
+            </div>
 
-    <div class="segundaParte">
-        <p>Tenetur natus quas incidunt facilis eaque eos qui? Modi impedit, 
-            neque eos in voluptate, necessitatibus pariatur cumque 
-            reprehenderit laboriosam rem laudantium officia dolorum! 
-            Fugiat incidunt, et odit distinctio ipsum dolore nihil 
-            optio corrupti sit nesciunt vel suscipit dignissimos 
-            excepturi temporibus harum beatae sequi explicabo corporis 
-            inventore iure quia. Veritatis, numquam.</p>
-    </div>
-    <img class="fundo" src="imagens/tinta.png" alt="Imagem de um respingo de tinta">
-    <img class="mulher" src="imagens/Mulher.png" alt="Imagem de uma mulher">
-    </section>
+            <div class="segundaParte">
+                <p id="parte2">Tenetur natus quas incidunt facilis eaque eos qui? Modi impedit,
+                    neque eos in voluptate, necessitatibus pariatur cumque
+                    reprehenderit laboriosam rem laudantium officia dolorum!
+                    Fugiat incidunt, et odit distinctio ipsum dolore nihil
+                    optio corrupti sit nesciunt vel suscipit dignissimos
+                    excepturi temporibus harum beatae sequi explicabo corporis
+                    inventore iure quia. Veritatis, numquam.</p>
+            </div>
+            <img class="fundo" src="imagens/tinta.png" alt="Imagem de um respingo de tinta">
+            <img class="mulher" src="imagens/Mulher.png" alt="Imagem de uma mulher">
+        </section>
 
-    <section class="conteudo-2" id="sobreNos">
-        <div class="texto">
-            <h1 class="titulo">Sobre nós</h1>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
-                Odit incidunt consectetur optio neque quae quisquam nobis 
-                quaerat consequuntur. Adipisci assumenda quibusdam 
-                corporis! Voluptate consectetur, natus alias ut dolor a 
-                amet laboriosam, explicabo facere excepturi quibusdam 
-                nulla sint, voluptatibus nostrum sapiente! Amet perferendis, 
-                atque dicta neque vel modi itaque exercitationem corrupti 
-                accusamus mollitia tenetur ipsam praesentium adipisci perspiciatis 
-                aliquam officia doloribus laborum quaerat blanditiis iusto 
-                dolore animi nam consequuntur pariatur? Pariatur similique 
-                ducimus, ullam autem nobis officiis a ipsam alias laborum.</p>
-            <img class="linha" src="imagens/Linha.png" alt="Imagem de uma linha rabiscada">
-        </div>
-        <img class="fundo" src="imagens/tinta.png" alt="Imagem de respingo de tinta">
-        <div class="container">
-            <button class="botao-2">
-                <img class="item" src="icones/dollar.png" alt="icone de moedas">financeiro
-            </button>
+        <section class="conteudo-2" id="sobreNos">
+            <div class="texto">
+                <h1 class="titulo">Sobre nós</h1>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                    Odit incidunt consectetur optio neque quae quisquam nobis
+                    quaerat consequuntur. Adipisci assumenda quibusdam
+                    corporis! Voluptate consectetur, natus alias ut dolor a
+                    amet laboriosam, explicabo facere excepturi quibusdam
+                    nulla sint, voluptatibus nostrum sapiente! Amet perferendis,
+                    atque dicta neque vel modi itaque exercitationem corrupti
+                    accusamus mollitia tenetur ipsam praesentium adipisci perspiciatis
+                    aliquam officia doloribus laborum quaerat blanditiis iusto
+                    dolore animi nam consequuntur pariatur? Pariatur similique
+                    ducimus, ullam autem nobis officiis a ipsam alias laborum.</p>
+                <img class="linha" src="imagens/Linha.png" alt="Imagem de uma linha rabiscada">
+            </div>
+            <img class="fundo" src="imagens/tinta.png" alt="Imagem de respingo de tinta">
+            <div class="container">
+                <button class="botao-2">
+                    <img class="item" src="icones/dollar.png" alt="icone de moedas">financeiro
+                </button>
 
-            <a href="#nossaHistoria" class="botao-2">
-                <img class="item" src="icones/house.png" alt="Icone de uma casa">história
-            </a>
+                <a href="#nossaHistoria" class="botao-2">
+                    <img class="item" src="icones/house.png" alt="Icone de uma casa">história
+                </a>
 
-            <button class="botao-2">
-                <img class="item" src="icones/map.png" alt="Icone ponto de local">local
-            </button>
+                <button class="botao-2">
+                    <img class="item" src="icones/map.png" alt="Icone ponto de local">local
+                </button>
 
-            <a href="#rodape" class="botao-2">
-                <img class="item" src="icones/telephone.png" alt="Icone de telefone">contatos
-            </a>
-        </div>
-    </section>
+                <a href="#rodape" class="botao-2">
+                    <img class="item" src="icones/telephone.png" alt="Icone de telefone">contatos
+                </a>
+            </div>
+        </section>
     </main>
 
     <footer class="rodape" id="rodape">
@@ -99,10 +101,15 @@
         <div class="menuRodape">
             <p class="contat">Entre em contato:</p>
             <p class="itemRodape"><img class="instagram" src="icones/instagram.png" alt="Icone do instagram">_femme</p>
-            <p class="itemRodape"><img class="email" src="icones/envelope.png" alt="Icone de envelope">contatofemme@gmail.com</p>
-            <p class="itemRodape"> <img class="telefone" src="icones/telephone-.png" alt="Icone de telefone"> (21) 93345.2653</p>
+            <p class="itemRodape"><img class="email" src="icones/envelope.png"
+                    alt="Icone de envelope">contatofemme@gmail.com</p>
+            <p class="itemRodape"> <img class="telefone" src="icones/telephone-.png" alt="Icone de telefone"> (21)
+                93345.2653</p>
         </div>
         <img class="flores" src="imagens/flores-direita.png" alt="Imagem de um galho com flores">
     </footer>
+
+    <script src="script.js"></script>
 </body>
+
 </html>
